--- a/pc.html
+++ b/pc.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>🌐 PC Master Universe: Guía Definitiva</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="fotos/pc gamer.jpg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
         
